--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/Followup/FollowupView.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/Followup/FollowupView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,32 +11,58 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="FollowupView" customModule="Feedback" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="85"/>
+            <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ciH-zk-eFB">
-                    <rect key="frame" x="30" y="10" width="456" height="65"/>
+                    <rect key="frame" x="0.0" y="10" width="516" height="90"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="65" id="452-Fp-ffd"/>
+                        <constraint firstAttribute="height" constant="90" id="452-Fp-ffd"/>
                     </constraints>
                     <color key="textColor" systemColor="labelColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <connections>
                         <outlet property="delegate" destination="iN0-l3-epB" id="0gv-yX-L4K"/>
                     </connections>
                 </textView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/1000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BJH-XP-Fwu">
+                    <rect key="frame" x="471.5" y="80.5" width="39.5" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJR-WZ-rTr">
+                    <rect key="frame" x="361" y="115" width="155" height="42"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="155" id="3l2-i9-xjv"/>
+                        <constraint firstAttribute="height" constant="42" id="pZN-qN-NES"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                    <state key="normal" title="Finish">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onFinished:" destination="iN0-l3-epB" eventType="touchUpInside" id="iEU-l6-2Ms"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="ciH-zk-eFB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="44c-iA-ooI"/>
-                <constraint firstAttribute="bottom" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="10" id="gwv-ga-ePh"/>
+                <constraint firstItem="HJR-WZ-rTr" firstAttribute="top" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="15" id="0LE-P7-jEq"/>
+                <constraint firstItem="ciH-zk-eFB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="44c-iA-ooI"/>
+                <constraint firstItem="BJH-XP-Fwu" firstAttribute="bottom" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="-5" id="C9X-K8-3rV"/>
+                <constraint firstAttribute="trailing" secondItem="HJR-WZ-rTr" secondAttribute="trailing" id="CK7-3s-9zB"/>
+                <constraint firstAttribute="bottom" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="75" id="aX1-Tl-pf4"/>
                 <constraint firstItem="ciH-zk-eFB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="nTT-vx-6NJ"/>
-                <constraint firstAttribute="trailing" secondItem="ciH-zk-eFB" secondAttribute="trailing" constant="30" id="sOy-Ei-eJh"/>
+                <constraint firstAttribute="trailing" secondItem="ciH-zk-eFB" secondAttribute="trailing" id="sOy-Ei-eJh"/>
+                <constraint firstItem="BJH-XP-Fwu" firstAttribute="trailing" secondItem="ciH-zk-eFB" secondAttribute="trailing" constant="-5" id="sPp-GL-4q3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="btnFinish" destination="HJR-WZ-rTr" id="biq-3p-Td5"/>
+                <outlet property="lblNumbers" destination="BJH-XP-Fwu" id="Yn1-Qi-ncm"/>
                 <outlet property="textView" destination="ciH-zk-eFB" id="IpC-cd-5GQ"/>
                 <outlet property="textViewHeightConstraint" destination="452-Fp-ffd" id="YVn-qj-oRF"/>
             </connections>
