--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/MCQ/MCQView.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/MCQ/MCQView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,22 +11,39 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" userLabel="MCQ View" customClass="MCQView" customModule="Feedback" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="130"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vIe-j1-MFe">
-                    <rect key="frame" x="30" y="15" width="330" height="70"/>
+                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vIe-j1-MFe">
+                    <rect key="frame" x="0.0" y="15" width="390" height="40"/>
                 </stackView>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vte-Vm-TCB">
+                    <rect key="frame" x="235" y="70" width="155" height="42"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="42" id="vla-2Q-Ice"/>
+                        <constraint firstAttribute="width" constant="155" id="vpq-x5-CzS"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                    <state key="normal" title="Finish">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onFinishTaped:" destination="iN0-l3-epB" eventType="touchUpInside" id="Sab-34-Ghp"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="vIe-j1-MFe" secondAttribute="bottom" constant="15" id="83N-8Z-PaV"/>
-                <constraint firstAttribute="trailing" secondItem="vIe-j1-MFe" secondAttribute="trailing" constant="30" id="fBH-em-Cpy"/>
+                <constraint firstAttribute="bottom" secondItem="vIe-j1-MFe" secondAttribute="bottom" constant="75" id="83N-8Z-PaV"/>
+                <constraint firstAttribute="trailing" secondItem="Vte-Vm-TCB" secondAttribute="trailing" id="Fm4-u5-JNv"/>
+                <constraint firstAttribute="trailing" secondItem="vIe-j1-MFe" secondAttribute="trailing" id="fBH-em-Cpy"/>
                 <constraint firstItem="vIe-j1-MFe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="jT1-p3-8d5"/>
-                <constraint firstItem="vIe-j1-MFe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="wcK-GX-LI2"/>
+                <constraint firstItem="Vte-Vm-TCB" firstAttribute="top" secondItem="vIe-j1-MFe" secondAttribute="bottom" constant="15" id="nj3-zt-gcg"/>
+                <constraint firstItem="vIe-j1-MFe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wcK-GX-LI2"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="btnFinish" destination="Vte-Vm-TCB" id="0vz-tF-Zrh"/>
                 <outlet property="stackView1" destination="vIe-j1-MFe" id="cfs-lV-4xB"/>
             </connections>
             <point key="canvasLocation" x="242.0289855072464" y="-107.14285714285714"/>
