--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/NumberCollectionViewCell.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/NumberCollectionViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,32 +11,42 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NumberCollectionViewCell" id="gTV-IL-0wX" customClass="NumberCollectionViewCell" customModule="Feedback" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xtp-jG-3wO" customClass="NumberButton" customModule="Feedback" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xtp-jG-3wO" customClass="NumberButton" customModule="Feedback" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="2fM-0j-bfI"/>
-                            <constraint firstAttribute="width" constant="40" id="V6r-xN-ktQ"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal" title="1"/>
+                        <state key="normal" title="1">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAf-BH-9Yo">
+                        <rect key="frame" x="0.0" y="0.0" width="0.5" height="65"/>
+                        <color key="backgroundColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="0.5" id="1I5-n4-HBB"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="Xtp-jG-3wO" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="dOy-dC-vUw"/>
-                <constraint firstItem="Xtp-jG-3wO" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="q20-hZ-RKG"/>
+                <constraint firstAttribute="bottom" secondItem="eAf-BH-9Yo" secondAttribute="bottom" id="CEC-Me-nva"/>
+                <constraint firstItem="Xtp-jG-3wO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Mdv-Mq-drf"/>
+                <constraint firstItem="eAf-BH-9Yo" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="PUw-OH-fBa"/>
+                <constraint firstItem="Xtp-jG-3wO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="S9d-9V-9WS"/>
+                <constraint firstAttribute="trailing" secondItem="Xtp-jG-3wO" secondAttribute="trailing" id="fk3-XI-APx"/>
+                <constraint firstItem="eAf-BH-9Yo" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="g5A-wc-j5b"/>
+                <constraint firstAttribute="bottom" secondItem="Xtp-jG-3wO" secondAttribute="bottom" id="qmP-c1-USv"/>
             </constraints>
             <connections>
-                <outlet property="btnNumber" destination="Xtp-jG-3wO" id="gwG-7D-fAa"/>
+                <outlet property="btnNumber" destination="Xtp-jG-3wO" id="pMp-85-6a6"/>
+                <outlet property="leftBorder" destination="eAf-BH-9Yo" id="y98-E9-yNw"/>
             </connections>
             <point key="canvasLocation" x="96" y="68"/>
         </collectionViewCell>
