--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/OneToTenView.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/OneToTenView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,18 +10,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OneToTenView" customModule="Feedback" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="141"/>
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OneToTenView" customModule="Feedback" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="407-fw-PyS">
-                    <rect key="frame" x="30" y="10" width="456" height="120"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="407-fw-PyS">
+                    <rect key="frame" x="158" y="20" width="200" height="65"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="120" id="4hx-77-E4L"/>
+                        <constraint firstAttribute="height" constant="65" id="4hx-77-E4L"/>
+                        <constraint firstAttribute="width" priority="250" constant="200" id="ni3-HH-PrQ"/>
                     </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="15" minimumInteritemSpacing="15" id="lcH-6U-osW">
-                        <size key="itemSize" width="40" height="40"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="lcH-6U-osW">
+                        <size key="itemSize" width="65" height="65"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -30,20 +32,39 @@
                         <outlet property="delegate" destination="iN0-l3-epB" id="i8U-2s-imh"/>
                     </connections>
                 </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not likely at all" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUv-jG-9il">
+                    <rect key="frame" x="158" y="90" width="83" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Extremely likely" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhu-DD-glH">
+                    <rect key="frame" x="270" y="90" width="88" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="407-fw-PyS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="b1g-xW-qF8"/>
-                <constraint firstAttribute="bottom" secondItem="407-fw-PyS" secondAttribute="bottom" constant="10" id="erJ-eQ-Ixn"/>
-                <constraint firstItem="407-fw-PyS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="kcY-3S-TZb"/>
-                <constraint firstAttribute="trailing" secondItem="407-fw-PyS" secondAttribute="trailing" constant="30" id="ydc-8K-WeC"/>
+                <constraint firstItem="uUv-jG-9il" firstAttribute="top" secondItem="407-fw-PyS" secondAttribute="bottom" constant="5" id="6x1-PB-NQ1"/>
+                <constraint firstItem="407-fw-PyS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="H5W-O8-P5L"/>
+                <constraint firstItem="uUv-jG-9il" firstAttribute="leading" secondItem="407-fw-PyS" secondAttribute="leading" id="Hdp-Qp-Zdo"/>
+                <constraint firstItem="407-fw-PyS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="b1g-xW-qF8"/>
+                <constraint firstItem="dhu-DD-glH" firstAttribute="centerY" secondItem="uUv-jG-9il" secondAttribute="centerY" id="eoy-zZ-ubd"/>
+                <constraint firstItem="dhu-DD-glH" firstAttribute="trailing" secondItem="407-fw-PyS" secondAttribute="trailing" id="jAe-Yf-1he"/>
+                <constraint firstItem="407-fw-PyS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" id="kcY-3S-TZb"/>
+                <constraint firstAttribute="bottom" secondItem="407-fw-PyS" secondAttribute="bottom" constant="90" id="vF8-kP-x8t"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="407-fw-PyS" secondAttribute="trailing" id="ydc-8K-WeC"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="collectionView" destination="407-fw-PyS" id="QdD-p3-5jC"/>
-                <outlet property="collectionViewHeightConstraint" destination="4hx-77-E4L" id="bj8-yd-H25"/>
+                <outlet property="collectionViewWidth" destination="ni3-HH-PrQ" id="l7M-a4-YJB"/>
+                <outlet property="lblMaxValue" destination="dhu-DD-glH" id="CNA-eb-ZLw"/>
+                <outlet property="lblMinValue" destination="uUv-jG-9il" id="Edd-W2-JfH"/>
             </connections>
-            <point key="canvasLocation" x="278.26086956521743" y="-104.12946428571428"/>
+            <point key="canvasLocation" x="278.26086956521743" y="-112.83482142857142"/>
         </view>
     </objects>
     <resources>
