--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/Stars/StarsView.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/Stars/StarsView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,11 +11,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="StarsView" customModule="Feedback" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="2KT-2a-WFg">
-                    <rect key="frame" x="128" y="10" width="260" height="40"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2KT-2a-WFg">
+                    <rect key="frame" x="118" y="25" width="280" height="40"/>
                     <subviews>
                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rUb-4Z-Nnu">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -24,66 +25,66 @@
                                 <constraint firstAttribute="width" constant="40" id="x9e-w3-Ls3"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" image="Star"/>
+                            <state key="normal" image="StarBlank"/>
                             <state key="selected" image="StarFilled"/>
                             <connections>
-                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchDown" id="UQf-9d-QnY"/>
+                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="DBQ-kR-mUN"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGG-Z6-j9c">
-                            <rect key="frame" x="55" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="60" y="0.0" width="40" height="40"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="1DZ-gA-IoL"/>
                                 <constraint firstAttribute="height" constant="40" id="Dt1-U0-m0k"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" image="Star"/>
+                            <state key="normal" image="StarBlank"/>
                             <state key="selected" image="StarFilled"/>
                             <connections>
-                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchDown" id="L8u-0I-Bh6"/>
+                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="wc4-iC-W11"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mqx-o1-Mp2">
-                            <rect key="frame" x="110" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="120" y="0.0" width="40" height="40"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="Do5-lh-yWJ"/>
                                 <constraint firstAttribute="height" constant="40" id="lgh-eo-ai9"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" image="Star"/>
+                            <state key="normal" image="StarBlank"/>
                             <state key="selected" image="StarFilled"/>
                             <connections>
-                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchDown" id="qZZ-De-oIq"/>
+                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="F32-GT-mAd"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qT-ic-oB5">
-                            <rect key="frame" x="165" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="180" y="0.0" width="40" height="40"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="2xp-DX-ahD"/>
                                 <constraint firstAttribute="width" constant="40" id="EEQ-0U-j01"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" image="Star"/>
+                            <state key="normal" image="StarBlank"/>
                             <state key="selected" image="StarFilled"/>
                             <connections>
-                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchDown" id="Zz1-gH-PF2"/>
+                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="jZr-1a-tb7"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAg-dJ-FQl">
-                            <rect key="frame" x="220" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="240" y="0.0" width="40" height="40"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="194-Cb-vSF"/>
                                 <constraint firstAttribute="width" constant="40" id="KbY-Q4-2rW"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" image="Star"/>
+                            <state key="normal" image="StarBlank"/>
                             <state key="selected" image="StarFilled"/>
                             <connections>
-                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchDown" id="6zE-cT-MkG"/>
+                                <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="A1v-HP-NAP"/>
                             </connections>
                         </button>
                     </subviews>
@@ -91,31 +92,23 @@
                         <constraint firstAttribute="height" constant="40" id="X2F-mT-dS2"/>
                     </constraints>
                 </stackView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap the stars to rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46o-6Y-1Hg">
-                    <rect key="frame" x="189.5" y="60" width="137.5" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="46o-6Y-1Hg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="CRn-d6-9mH"/>
+                <constraint firstAttribute="bottom" secondItem="2KT-2a-WFg" secondAttribute="bottom" constant="110" id="5IB-a1-aBN"/>
                 <constraint firstItem="2KT-2a-WFg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Fss-CL-BAH"/>
-                <constraint firstAttribute="bottom" secondItem="2KT-2a-WFg" secondAttribute="bottom" constant="50" id="RSH-5F-WEc"/>
-                <constraint firstItem="46o-6Y-1Hg" firstAttribute="top" secondItem="2KT-2a-WFg" secondAttribute="bottom" constant="10" id="XCU-pW-9fa"/>
-                <constraint firstItem="2KT-2a-WFg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="iwq-9d-7Mv"/>
+                <constraint firstItem="2KT-2a-WFg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="iwq-9d-7Mv"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="stackView1" destination="2KT-2a-WFg" id="SeU-B0-WgG"/>
+                <outlet property="stackView1" destination="2KT-2a-WFg" id="6iB-gf-264"/>
             </connections>
             <point key="canvasLocation" x="278.26086956521743" y="-106.13839285714285"/>
         </view>
     </objects>
     <resources>
-        <image name="Star" width="26" height="24.666666030883789"/>
-        <image name="StarFilled" width="26" height="24.666666030883789"/>
+        <image name="StarBlank" width="31.666666030883789" height="30.333333969116211"/>
+        <image name="StarFilled" width="31.666666030883789" height="30.333333969116211"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
