--- a/Example/1Flow/Base.lproj/Main.storyboard
+++ b/Example/1Flow/Base.lproj/Main.storyboard
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="1Flow_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="_Flow_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -20,11 +18,43 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uia-pA-UWd">
+                                <rect key="frame" x="95" y="318.5" width="185" height="30"/>
+                                <state key="normal" title="Record Event - With param"/>
+                                <connections>
+                                    <action selector="onRecordEvent_withParams:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="SRr-aT-8fh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ra-cK-Wt0">
+                                <rect key="frame" x="157.5" y="368.5" width="60" height="30"/>
+                                <state key="normal" title="Log user"/>
+                                <connections>
+                                    <action selector="onLogUser:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Y7s-PZ-Emk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4oS-n8-BsL">
+                                <rect key="frame" x="100.5" y="268.5" width="174" height="30"/>
+                                <state key="normal" title="Record Event - All Survey"/>
+                                <connections>
+                                    <action selector="onRecordEvent_startSurvey:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="bPh-Ze-kDn"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4oS-n8-BsL" firstAttribute="centerX" secondItem="uia-pA-UWd" secondAttribute="centerX" id="Awt-gv-S7G"/>
+                            <constraint firstItem="1Ra-cK-Wt0" firstAttribute="centerX" secondItem="uia-pA-UWd" secondAttribute="centerX" id="Evs-NI-iN0"/>
+                            <constraint firstItem="uia-pA-UWd" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Ka5-vX-21G"/>
+                            <constraint firstItem="uia-pA-UWd" firstAttribute="top" secondItem="4oS-n8-BsL" secondAttribute="bottom" constant="20" id="Tif-oW-Mrd"/>
+                            <constraint firstItem="1Ra-cK-Wt0" firstAttribute="top" secondItem="uia-pA-UWd" secondAttribute="bottom" constant="20" id="XB8-XL-EZJ"/>
+                            <constraint firstItem="uia-pA-UWd" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="cLF-p8-1m2"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="28" y="70"/>
         </scene>
     </scenes>
 </document>
