--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/OFNumberCollectionViewCell.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/OFNumberCollectionViewCell.xib
@@ -10,14 +10,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NumberCollectionViewCell" id="gTV-IL-0wX" customClass="NumberCollectionViewCell" customModule="Feedback" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OFNumberCollectionViewCell" id="gTV-IL-0wX" customClass="OFNumberCollectionViewCell" customModule="Feedback" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xtp-jG-3wO" customClass="NumberButton" customModule="Feedback" customModuleProvider="target">
+                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xtp-jG-3wO" customClass="OFNumberButton" customModule="Feedback" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
