--- a/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/OFOneToTenView.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/Rating Controlls/OneToTen/OFOneToTenView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OneToTenView" customModule="Feedback" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OFOneToTenView" customModule="Feedback" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
