--- a/Survey/Resources/OFFollowupView.xib
+++ b/Survey/Resources/OFFollowupView.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OBJCOFFollowupView">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
+            <rect key="frame" x="0.0" y="0.0" width="516" height="226"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ciH-zk-eFB">
-                    <rect key="frame" x="0.0" y="10" width="516" height="90"/>
+                    <rect key="frame" x="0.0" y="10" width="516" height="109"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="90" id="452-Fp-ffd"/>
+                        <constraint firstAttribute="height" constant="109" id="452-Fp-ffd"/>
                     </constraints>
                     <color key="textColor" systemColor="labelColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -28,46 +28,69 @@
                     </connections>
                 </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/1000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BJH-XP-Fwu">
-                    <rect key="frame" x="471.5" y="80.5" width="39.5" height="14.5"/>
+                    <rect key="frame" x="471.5" y="99.5" width="39.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJR-WZ-rTr">
-                    <rect key="frame" x="361" y="115" width="155" height="42"/>
+                    <rect key="frame" x="0.0" y="134" width="516" height="38"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="155" id="3l2-i9-xjv"/>
-                        <constraint firstAttribute="height" constant="42" id="pZN-qN-NES"/>
+                        <constraint firstAttribute="height" constant="38" id="pZN-qN-NES"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                    <state key="normal" title="Finish">
+                    <state key="normal" title="Submit Feedback">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
                         <action selector="onFinished:" destination="iN0-l3-epB" eventType="touchUpInside" id="iEU-l6-2Ms"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJ7-l3-wB3">
+                    <rect key="frame" x="243" y="185" width="30" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="Kku-zk-9oH"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="Skip">
+                        <color key="titleColor" red="0.31372549020000001" green="0.33333333329999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </state>
+                    <connections>
+                        <action selector="onSkip:" destination="iN0-l3-epB" eventType="touchUpInside" id="NOk-SP-xAn"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="HJR-WZ-rTr" firstAttribute="top" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="15" id="0LE-P7-jEq"/>
+                <constraint firstAttribute="bottom" secondItem="cJ7-l3-wB3" secondAttribute="bottom" constant="20" id="0Le-M4-bzs"/>
+                <constraint firstItem="HJR-WZ-rTr" firstAttribute="leading" secondItem="ciH-zk-eFB" secondAttribute="leading" id="39m-tv-jzp"/>
+                <constraint firstItem="HJR-WZ-rTr" firstAttribute="trailing" secondItem="ciH-zk-eFB" secondAttribute="trailing" id="3Ap-cD-T6m"/>
                 <constraint firstItem="ciH-zk-eFB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="44c-iA-ooI"/>
                 <constraint firstItem="BJH-XP-Fwu" firstAttribute="bottom" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="-5" id="C9X-K8-3rV"/>
-                <constraint firstAttribute="trailing" secondItem="HJR-WZ-rTr" secondAttribute="trailing" id="CK7-3s-9zB"/>
-                <constraint firstAttribute="bottom" secondItem="ciH-zk-eFB" secondAttribute="bottom" constant="75" id="aX1-Tl-pf4"/>
+                <constraint firstItem="cJ7-l3-wB3" firstAttribute="top" secondItem="HJR-WZ-rTr" secondAttribute="bottom" constant="13" id="iW2-KY-OYp"/>
                 <constraint firstItem="ciH-zk-eFB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="nTT-vx-6NJ"/>
                 <constraint firstAttribute="trailing" secondItem="ciH-zk-eFB" secondAttribute="trailing" id="sOy-Ei-eJh"/>
                 <constraint firstItem="BJH-XP-Fwu" firstAttribute="trailing" secondItem="ciH-zk-eFB" secondAttribute="trailing" constant="-5" id="sPp-GL-4q3"/>
+                <constraint firstItem="cJ7-l3-wB3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="t6t-AR-55B"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="btnFinish" destination="HJR-WZ-rTr" id="biq-3p-Td5"/>
                 <outlet property="lblNumbers" destination="BJH-XP-Fwu" id="Yn1-Qi-ncm"/>
+                <outlet property="skipButton" destination="cJ7-l3-wB3" id="SDF-5J-q3f"/>
                 <outlet property="textView" destination="ciH-zk-eFB" id="IpC-cd-5GQ"/>
                 <outlet property="textViewHeightConstraint" destination="452-Fp-ffd" id="YVn-qj-oRF"/>
             </connections>
             <point key="canvasLocation" x="278.26086956521743" y="-106.13839285714285"/>
         </view>
+        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="NXL-f1-wHt">
+            <rect key="frame" x="0.0" y="0.0" width="67" height="31"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <state key="normal" title="Button"/>
+            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+            <point key="canvasLocation" x="88" y="-231"/>
+        </button>
     </objects>
     <resources>
         <systemColor name="labelColor">
