--- a/Survey/Resources/OFOneToTenView.xib
+++ b/Survey/Resources/OFOneToTenView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OBJCOFOneToTenView">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
+            <rect key="frame" x="0.0" y="0.0" width="516" height="130"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="407-fw-PyS">
@@ -33,28 +33,28 @@
                     </connections>
                 </collectionView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not likely at all" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUv-jG-9il">
-                    <rect key="frame" x="158" y="90" width="83" height="15"/>
+                    <rect key="frame" x="158" y="85" width="83" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="textColor" red="0.47058823529411764" green="0.47058823529411764" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Extremely likely" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhu-DD-glH">
-                    <rect key="frame" x="270" y="90" width="88" height="15"/>
+                    <rect key="frame" x="270" y="85" width="88" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="textColor" red="0.47058823529411764" green="0.47058823529411764" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="uUv-jG-9il" firstAttribute="top" secondItem="407-fw-PyS" secondAttribute="bottom" constant="5" id="6x1-PB-NQ1"/>
+                <constraint firstItem="uUv-jG-9il" firstAttribute="top" secondItem="407-fw-PyS" secondAttribute="bottom" id="6x1-PB-NQ1"/>
                 <constraint firstItem="407-fw-PyS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="H5W-O8-P5L"/>
                 <constraint firstItem="uUv-jG-9il" firstAttribute="leading" secondItem="407-fw-PyS" secondAttribute="leading" id="Hdp-Qp-Zdo"/>
                 <constraint firstItem="407-fw-PyS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="b1g-xW-qF8"/>
                 <constraint firstItem="dhu-DD-glH" firstAttribute="centerY" secondItem="uUv-jG-9il" secondAttribute="centerY" id="eoy-zZ-ubd"/>
                 <constraint firstItem="dhu-DD-glH" firstAttribute="trailing" secondItem="407-fw-PyS" secondAttribute="trailing" id="jAe-Yf-1he"/>
                 <constraint firstItem="407-fw-PyS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" id="kcY-3S-TZb"/>
-                <constraint firstAttribute="bottom" secondItem="407-fw-PyS" secondAttribute="bottom" constant="90" id="vF8-kP-x8t"/>
+                <constraint firstAttribute="bottom" secondItem="407-fw-PyS" secondAttribute="bottom" constant="45" id="vF8-kP-x8t"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="407-fw-PyS" secondAttribute="trailing" id="ydc-8K-WeC"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
