--- a/Survey/Resources/OFStarsView.xib
+++ b/Survey/Resources/OFStarsView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,18 +11,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="OBJCOFStarsView">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="175"/>
+            <rect key="frame" x="0.0" y="0.0" width="516" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2KT-2a-WFg">
-                    <rect key="frame" x="118" y="25" width="280" height="40"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="2KT-2a-WFg">
+                    <rect key="frame" x="158.5" y="25" width="199" height="29"/>
                     <subviews>
                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rUb-4Z-Nnu">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="0.0" y="0.0" width="31" height="29"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="40" id="VGv-ZO-aBq"/>
-                                <constraint firstAttribute="width" constant="40" id="x9e-w3-Ls3"/>
+                                <constraint firstAttribute="height" constant="29" id="VGv-ZO-aBq"/>
+                                <constraint firstAttribute="width" constant="31" id="x9e-w3-Ls3"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -30,48 +30,32 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGG-Z6-j9c">
-                            <rect key="frame" x="60" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="42" y="0.0" width="31" height="29"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="40" id="1DZ-gA-IoL"/>
-                                <constraint firstAttribute="height" constant="40" id="Dt1-U0-m0k"/>
-                            </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="wc4-iC-W11"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mqx-o1-Mp2">
-                            <rect key="frame" x="120" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="84" y="0.0" width="31" height="29"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="40" id="Do5-lh-yWJ"/>
-                                <constraint firstAttribute="height" constant="40" id="lgh-eo-ai9"/>
-                            </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="F32-GT-mAd"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qT-ic-oB5">
-                            <rect key="frame" x="180" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="126" y="0.0" width="31" height="29"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="2xp-DX-ahD"/>
-                                <constraint firstAttribute="width" constant="40" id="EEQ-0U-j01"/>
-                            </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="jZr-1a-tb7"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAg-dJ-FQl">
-                            <rect key="frame" x="240" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="168" y="0.0" width="31" height="29"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="194-Cb-vSF"/>
-                                <constraint firstAttribute="width" constant="40" id="KbY-Q4-2rW"/>
-                            </constraints>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="onSelectButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="A1v-HP-NAP"/>
@@ -79,18 +63,35 @@
                         </button>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="X2F-mT-dS2"/>
+                        <constraint firstItem="VAg-dJ-FQl" firstAttribute="width" secondItem="rUb-4Z-Nnu" secondAttribute="width" id="G0L-Pe-PHL"/>
+                        <constraint firstItem="Mqx-o1-Mp2" firstAttribute="width" secondItem="rUb-4Z-Nnu" secondAttribute="width" id="PZO-Li-CZw"/>
+                        <constraint firstItem="VAg-dJ-FQl" firstAttribute="height" secondItem="rUb-4Z-Nnu" secondAttribute="height" id="U7K-5A-ZIO"/>
+                        <constraint firstAttribute="height" constant="29" id="X2F-mT-dS2"/>
+                        <constraint firstItem="9qT-ic-oB5" firstAttribute="height" secondItem="rUb-4Z-Nnu" secondAttribute="height" id="XiR-yG-bKb"/>
+                        <constraint firstItem="Mqx-o1-Mp2" firstAttribute="height" secondItem="rUb-4Z-Nnu" secondAttribute="height" id="gxn-59-lyU"/>
+                        <constraint firstItem="VGG-Z6-j9c" firstAttribute="width" secondItem="rUb-4Z-Nnu" secondAttribute="width" id="qdu-sD-aZP"/>
+                        <constraint firstItem="VGG-Z6-j9c" firstAttribute="height" secondItem="rUb-4Z-Nnu" secondAttribute="height" id="tQw-KH-f6m"/>
+                        <constraint firstItem="9qT-ic-oB5" firstAttribute="width" secondItem="rUb-4Z-Nnu" secondAttribute="width" id="zDN-ZN-PyM"/>
                     </constraints>
                 </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please select an option" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AY9-fn-hdG">
+                    <rect key="frame" x="192.5" y="73" width="131.5" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.31372549019607843" green="0.33333333333333331" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="2KT-2a-WFg" secondAttribute="bottom" constant="110" id="5IB-a1-aBN"/>
+                <constraint firstAttribute="bottom" secondItem="2KT-2a-WFg" secondAttribute="bottom" constant="66" id="5IB-a1-aBN"/>
                 <constraint firstItem="2KT-2a-WFg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Fss-CL-BAH"/>
+                <constraint firstItem="AY9-fn-hdG" firstAttribute="top" secondItem="2KT-2a-WFg" secondAttribute="bottom" constant="19" id="cZQ-WO-t5u"/>
                 <constraint firstItem="2KT-2a-WFg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="iwq-9d-7Mv"/>
+                <constraint firstItem="AY9-fn-hdG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="nUk-Hg-srw"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="ratingText" destination="AY9-fn-hdG" id="VEZ-F2-Mrb"/>
                 <outlet property="stackView1" destination="2KT-2a-WFg" id="6iB-gf-264"/>
             </connections>
             <point key="canvasLocation" x="278.26086956521743" y="-106.13839285714285"/>
